- Add a XMPP server list in Account widget - Fix CSS overflow error in Notifs - Add some help messages in Account widget

--- a/system/Widget/widgets/Notifs/notifs.css
+++ b/system/Widget/widgets/Notifs/notifs.css
@@ -52,7 +52,8 @@
     overflow: hidden; 
     border: 1px solid rgba(0, 0, 0, 0.5);
     max-height: 400px;
-    overflow-y: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 #notifslist .black {
